# semantic-integrity-to-execution-boundary

./: .gitignore  LICENSE  ONE_PROOF.md  OWNERSHIP.md  PROOF_STATUS.md  PROPRIETARY.md  Procfile  QUICKSTART.md  QUICKSTART_PUBLIC.md  README.md  demo_maritime.json  example_run.py  proof_output.json  pyproject.toml  receipt_1776713992.477294.json  run_api.sh  run_api_stdlib.sh  run_proof.py  save_receipt.py  sdc_veritas_handoff_demo.py  setup.sh
.github/workflows/: ci.yml
app/: adapter.py  admissibility.py  api.py  api_stdlib.py  authority.py  commit_gate.py  main.py  models.py  receipt.py  replay.py
app/corridors/: education.py  healthcare.py  maritime.py  registry.py
cases/: education_block.json  education_execute.json  healthcare_block.json  healthcare_execute.json  maritime_execute.json  registry_block.json  registry_execute.json
docs/: execution-boundary-build.md  proof-walkthrough.md  tim-anchor.md
docs/operational/: veritas_aegis_operational_sheet.xlsx  veritas_aegis_overview.pptx
tests/: run_cases.py  test_engine.py  test_run_proof.py
veritas_aegis/: __init__.py  __main__.py  basis.py  contracts.py  derivative_ordering.py  engine.py  receipts.py  state.py  storage.py  util.py
veritas_surface/: __init__.py  runtime.py
